--- a/app/components/Checkbox.css
+++ b/app/components/Checkbox.css
@@ -9,7 +9,7 @@
   display: inline-block;
   font-size: 2.4rem;
   font-weight: 500;
-  background-color: #fff;
+  background-color: #ebfffa;
   margin-bottom: 0.5em;
   border: 2px solid #121111;
   border-radius: 2px;
