--- a/app/components/ResultsFormCard.css
+++ b/app/components/ResultsFormCard.css
@@ -11,3 +11,15 @@
   font-weight: lighter !important;
   font-size: 1.9rem;
 }
+
+.completedIcon {
+  background-color: #009d86;
+  border-radius: 50%;
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  background-image: url('../assets/images/white_check_large.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 70%;
+}
