--- a/app/components/RadioButton.css
+++ b/app/components/RadioButton.css
@@ -1,14 +1,12 @@
 .radioButton {
   -webkit-appearance: none;
-  cursor: pointer;
-  position: relative;
   top: 0.6em;
   left: 0.7em;
-  border: 2px solid #30302f;
   height: 22px;
   width: 22px;
-  border-radius: 50%;
-  background-color: #fff;
+  padding: 0.3em !important;
+  border: 2px solid #30302f !important;
+  border-radius: 50% !important;
 }
 
 .radioButton:checked::before {
@@ -22,8 +20,4 @@
   width: 12px;
   border-radius: 50%;
   background-color: #017f6a;
-}
-
-.radioButton:focus {
-  outline: none;
 }
