--- a/app/components/IntroductionFormCard.css
+++ b/app/components/IntroductionFormCard.css
@@ -1,14 +1,14 @@
 .introductionTitle {
-  width: 65%;
-  margin: 1em auto;
+  max-width: 600px;
+  margin: 1em auto !important;
 }
 
 .stepBody {
-  width: 30%;
+  max-width: 300px;
   margin: 0 auto;
 }
 
 .stepTitle {
-  width: 30%;
+  max-width: 250px;
   margin: 0.5em auto;
 }
