--- a/app/components/PageFooter.css
+++ b/app/components/PageFooter.css
@@ -1,16 +1,20 @@
-.logo {
-  background-repeat: no-repeat;
-}
-
-.footerMedia {
-  width: 80%;
-  padding-top: 20px;
-  margin-bottom: 0 !important;
+.footer {
+  margin-top: 100px;
+  font-size: 10px;
+  font-weight: bolder;
+  background-color: #cfc5bf;
 }
 
 .footerContent {
-  padding-left: 120px;
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20px;
   padding-bottom: 30px;
+}
+
+.footerMedia {
+  margin-bottom: 0 !important;
 }
 
 .footerMessage {
@@ -24,11 +28,4 @@
 
 .footerLink:focus {
   box-shadow: none;
-}
-
-.footer {
-  margin-top: 100px;
-  font-size: 10px;
-  font-weight: bolder;
-  background-color: #cfc5bf;
 }
