--- a/app/components/RadioButton.css
+++ b/app/components/RadioButton.css
@@ -1,7 +1,23 @@
+.radioButtonWrapper {
+  display: inline-block !important;
+  padding: 0 !important;
+  height: 54px;
+  width: 54px;
+  border: 2px solid black;
+}
+
+.radioButtonWrapper:focus-within {
+  box-shadow: none !important;
+}
+
+.selected {
+  background-color: #ebfffa !important;
+}
+
 .radioButton {
   -webkit-appearance: none;
-  top: 0.6em;
-  left: 0.7em;
+  top: 14px;
+  left: 14px;
   height: 22px;
   width: 22px;
   padding: 0.3em !important;
