--- a/app/components/ResultsFormCard.css
+++ b/app/components/ResultsFormCard.css
@@ -11,7 +11,9 @@
   font-weight: lighter !important;
   font-size: 1.9rem;
   width: 50%;
-  margin: 0 auto;
+  margin-top: 2em;
+  margin-left: auto;
+  margin-right: auto;
   text-align: left;
 }
 
@@ -43,6 +45,7 @@
 }
 
 .contentsTableTitle {
+  margin-top: 2em;
   padding-left: 90px;
   text-align: left;
 }
