Show impact stats on results page
- impact stats are now part of Home component state
- Move parsing gogen output from writeSummaryReportUtils to gogenUtils since we need it for updating state as well as writing summary report

[#167710546]

--- a/app/components/ResultsFormCard.css
+++ b/app/components/ResultsFormCard.css
@@ -10,18 +10,29 @@
 .resultsSubheader {
   font-weight: lighter !important;
   font-size: 1.9rem;
-  width: 45%;
+  width: 50%;
   margin: 0 auto;
   text-align: left;
+}
+
+.subSectionTitle {
+  font-weight: 400;
+}
+
+.sectionDivider {
+  margin: 0 -38px auto;
+  width: 960px;
+  border-bottom: 2px solid #f7f5f4;
+}
+
+.impactSection {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .contentsListContainer {
   width: 50%;
   margin: 0 auto;
-}
-
-.contentListTitle {
-  font-weight: 400;
 }
 
 .contentsList {
