--- a/app/components/ResultsFormCard.css
+++ b/app/components/ResultsFormCard.css
@@ -106,6 +106,10 @@
   background-size: 70%;
 }
 
+.tealCheck {
+  background-image: url('../assets/images/teal_check.png');
+}
+
 .resultsFooter {
   margin-top: 0 !important;
 }
